--- a/.github/workflows/mvnotify.yaml
+++ b/.github/workflows/mvnotify.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           DIFF_RESULT=$(diff -u package-tree-old package-tree-new)
           if [ -n "$DIFF_RESULT" ]; then 
-              echo "::set-output name=diff-message::$(echo $DIFF_RESULT | sed 1,2d | grep '^[+-]' | sed '$!s/$/\\n/' | tr -d '\n')"
+              echo "::set-output name=diff-message::$(echo $DIFF_RESULT | sed 1,2d | grep '^[+-]')" | sed '$!s/$/\\n/' | tr -d '\n'
           fi
       - name: Format output
         id: format-output
