--- a/.github/workflows/mvnotify.yaml
+++ b/.github/workflows/mvnotify.yaml
@@ -28,7 +28,9 @@ jobs:
         # if: steps.cache-package-tree.outputs.cache-hit == 'true'
         run: |
           DIFF_RESULT=$(diff -u package-tree-old package-tree-new)
-          if [ -n "$DIFF_RESULT" ]; then echo $DIFF_RESULT fi
+          if [ -n "$DIFF_RESULT" ]; then
+              echo $DIFF_RESULT;
+          fi
       - name: Format output
         id: format-output
         if: steps.get-diff.outputs.diff-result != ''
