--- a/.github/workflows/mvnotify.yaml
+++ b/.github/workflows/mvnotify.yaml
@@ -33,8 +33,8 @@ jobs:
           fi
       - name: Format output
         id: format-output
-        if: steps.get-diff.outputs.diff-result != ''
-        run: echo '${{ steps.get-diff.outputs.diff-result }}'
+        if: steps.get-diff.outputs.diff-message != ''
+        run: echo '${{ steps.get-diff.outputs.diff-message }}'
       - name: Create the Mattermost Message
         if: steps.format-output.outputs.diff-message != ''
         run: |
