--- a/.github/workflows/mvnotify.yaml
+++ b/.github/workflows/mvnotify.yaml
@@ -12,20 +12,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # - name: Cache package tree
-      #   id: cache-package-tree
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: package-tree-old
-      #     key: ${{ runner.os }}-package-tree
-      # - name: Download packages from Maven Central
-      #   run: wget --user-agent=Mozilla/5.0 -e robots=off -r -p --no-parent -A pom https://repo.maven.apache.org/maven2/${{ env.GROUP_ID }}
-      # - name: Get new package tree
-      #   run: tree -d --noreport repo.maven.apache.org/maven2/${{ env.GROUP_ID }} > package-tree-new
+      - name: Cache package tree
+        id: cache-package-tree
+        uses: actions/cache@v2
+        with:
+          path: package-tree-old
+          key: ${{ runner.os }}-package-tree
+      - name: Download packages from Maven Central
+        run: wget --user-agent=Mozilla/5.0 -e robots=off -r -p --no-parent -A pom https://repo.maven.apache.org/maven2/${{ env.GROUP_ID }}
+      - name: Get new package tree
+        run: tree -d --noreport repo.maven.apache.org/maven2/${{ env.GROUP_ID }} > package-tree-new
       - name: Get and format diff
         id: get-diff
-        # if: steps.cache-package-tree.outputs.cache-hit == 'true'
+        if: steps.cache-package-tree.outputs.cache-hit == 'true'
         run: echo "::set-output name=diff-message::$(diff -u package-tree-old package-tree-new | sed 1,2d | grep '^[+-]' | sed '$!s/$/\\n/' | tr -d '\n' || :)"
       - name: Create the Mattermost Message
         if: steps.get-diff.outputs.diff-message != ''
@@ -39,5 +38,5 @@ jobs:
           MATTERMOST_WEBHOOK_URL: ${{ secrets.MATTERMOST_WEBHOOK_URL }}
           MATTERMOST_CHANNEL: ${{ secrets.MATTERMOST_CHANNEL }}
           MATTERMOST_ICON: ${{ secrets.MATTERMOST_ICON }}
-      # - name: Set package-tree
-      #   run: mv package-tree-new package-tree-old
+      - name: Set package-tree
+        run: mv package-tree-new package-tree-old
