Add sorting by version

--- a/.github/workflows/mvnotify.yaml
+++ b/.github/workflows/mvnotify.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Download packages from Maven Central
         run: wget -q --user-agent=Mozilla/5.0 -e robots=off -r -p --no-parent -A pom https://repo.maven.apache.org/maven2/${{ env.GROUP_ID }}
       - name: Get new package tree
-        run: tree --noreport repo.maven.apache.org/maven2/${{ env.GROUP_ID }} > package-tree-new
+        run: tree --noreport --sort version repo.maven.apache.org/maven2/${{ env.GROUP_ID }} > package-tree-new
       - name: Cache package tree
         id: cache-package-tree
         uses: actions/cache@v2
