--- a/.github/workflows/mvnotify.yml
+++ b/.github/workflows/mvnotify.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       # - name: Download packages from Maven Central
       #   run: |
       #     wget \
