--- a/.github/workflows/mvnotify.yml
+++ b/.github/workflows/mvnotify.yml
@@ -56,9 +56,9 @@ jobs:
         run: |
           cat <<EOF > mattermost.json
           {
-            "text": "*New packages has been deployed to Maven Central:*\`\`\`diff\n${{ steps.get-diff.outputs.diff-message }}\n\`\`\`",
             "attachments": [
               {
+                "text": "*New packages has been deployed to Maven Central:*\n\`\`\`diff\n${{ steps.get-diff.outputs.diff-message }}\n\`\`\`",
                 "footer_icon": "${{ secrets.MATTERMOST_ICON }}",
                 "footer": "Powered by <https://github.com/valitydev/mvnotify|mvnotify>"
               }
