--- a/.github/workflows/mvnotify.yml
+++ b/.github/workflows/mvnotify.yml
@@ -58,7 +58,7 @@ jobs:
           {
             "attachments": [
               {
-                "title": "New packages has been deployed to Maven Central:"
+                "title": "New packages has been deployed to Maven Central:",
                 "text": "\`\`\`diff\n${{ steps.get-diff.outputs.diff-message }}\n\`\`\`",
                 "footer_icon": "${{ secrets.MATTERMOST_ICON }}",
                 "footer": "Powered by [mvnotify](https://github.com/valitydev/mvnotify)"
