Change footer information

--- a/.github/workflows/mvnotify.yml
+++ b/.github/workflows/mvnotify.yml
@@ -61,7 +61,7 @@ jobs:
                 "title": "New packages has been deployed to Maven Central:",
                 "text": "\`\`\`diff\n${{ steps.get-diff.outputs.diff-message }}\n\`\`\`",
                 "footer_icon": "${{ secrets.MATTERMOST_ICON }}",
-                "footer": "Powered by [mvnotify](https://github.com/valitydev/mvnotify)"
+                "footer": "mvnotify"
               }
             ]
           }
